--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Cuddalore Connect | City Guide</title>
 
 
+
+google-site-verification=uK7cFi6RiL_qt_DfqK_nrhU0kLqVd3SsnD7EGWXASEs
+
+
+
+
+
+
     <!-- PWA Open -->
 
     <link rel="manifest" href="manifest.json">
