--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 
 
-google-site-verification=uK7cFi6RiL_qt_DfqK_nrhU0kLqVd3SsnD7EGWXASEs
-
+<meta name="google-site-verification" content="tRgrNV5W-AwBZ2LBDmUq6GoTuzfjp_eoZR4F0xBvJT0" />
 
 
 
