--- a/AC-Mechanic.html
+++ b/AC-Mechanic.html
@@ -5,6 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AC Services | Cuddalore Connect</title>
+
+
+
+
+<!-- Google tag (gtag.js)ஆரம்பம் -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9CZ8J4G114"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9CZ8J4G114');
+</script>
+
+
+<!-- Google tag (gtag.js) முடிவு -->
+
+
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
