--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 
 
 
+
+
+<!-- Google tag (gtag.js)ஆரம்பம் -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9CZ8J4G114"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9CZ8J4G114');
+</script>
+
+
+<!-- Google tag (gtag.js) முடிவு -->
+
+
+
 <meta name="google-site-verification" content="tRgrNV5W-AwBZ2LBDmUq6GoTuzfjp_eoZR4F0xBvJT0" />
 
 
