--- a/store list.html
+++ b/store list.html
@@ -5,6 +5,23 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Store List</title>
 
+
+
+
+<!-- Google tag (gtag.js)ஆரம்பம் -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9CZ8J4G114"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-9CZ8J4G114');
+</script>
+
+
+<!-- Google tag (gtag.js) முடிவு -->
+
+
 <style>
 :root{
   --bg:#f1f3f6;
