--- a/Plumber.html
+++ b/Plumber.html
@@ -44,6 +44,16 @@
             background: var(--bg);
             color: var(--text);
             overflow-x: hidden;
+
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+
+
+
         }
 
         /* Header */
