--- a/about.html
+++ b/about.html
@@ -43,6 +43,15 @@
             color: var(--text);
             overflow-x: hidden;
             line-height: 1.6;
+
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+
+
         }
 
         /* Header */
