--- a/store list.html
+++ b/store list.html
@@ -39,6 +39,15 @@ body{
   font-family:"Segoe UI", Arial, sans-serif;
   background:linear-gradient(180deg,#eef2f7,#f8f9fb);
   color:var(--primary);
+
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+
+
 }
 
 /* HEADER */
