--- a/taxi.html
+++ b/taxi.html
@@ -43,6 +43,15 @@
             background: var(--bg);
             color: var(--text);
             overflow-x: hidden;
+
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+
+
         }
 
         /* Header */
