--- a/test.html
+++ b/test.html
@@ -40,6 +40,15 @@
             font-family: 'Poppins', sans-serif;
             background: var(--bg);
             color: var(--text);
+
+
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+
+
         }
 
         /* Header */
